k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-api
  labels:
    app: weather-api
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: weather-api
  template:
    metadata:
        labels:
            app: weather-api
    spec:
      containers:
        - name: weather-api
          image: aussieweever/weather-api:2023100701
          ports:
            - containerPort: 8080
