k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-api
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: weather-api
