k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
      - host: weather-api.aussieweaver.com
        http:
          paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: weather-api
                port:
                  number: 80
